--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "@react-email/components": "^0.5.7",
         "@react-hookz/web": "25.1.1",
         "@simpleanalytics/next": "^1.0.1",
+        "@svgr/webpack": "^8.1.0",
         "@t3-oss/env-nextjs": "^0.13.8",
         "@tanstack/react-form": "^1.23.8",
         "@tanstack/react-query": "^5.90.5",
@@ -91,6 +92,7 @@
         "recharts": "^3.3.0",
         "resend": "^6.2.2",
         "server-only": "^0.0.1",
+        "smart-clinic": ".",
         "sonner": "^2.0.7",
         "streamdown": "^1.4.0",
         "superjson": "^2.2.3",
@@ -133,15 +135,17 @@
     "name": "smart-clinic",
     "private": true,
     "scripts": {
-        "build": "next build",
+        "build": "next build --webpack",
         "check": "biome check .",
         "check:unsafe": "biome check --write --unsafe .",
         "check:write": "biome check --write .",
-        "db:generate": "prisma migrate dev",
-        "db:migrate": "prisma migrate deploy",
+        "db:admin": "tsx prisma/admin.ts",
+        "db:generate": "prisma generate",
+        "db:migrate": "prisma migrate dev",
         "db:push": "prisma db push",
+        "db:reset": " prisma migrate reset --force --skip-seed",
         "db:studio": "prisma studio",
-        "dev": "next dev",
+        "dev": "next dev --turbopack",
         "format": "biome format --write",
         "lint": "biome check",
         "postinstall": "prisma generate",
