--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "dependencies": {
-        "@ai-sdk/google": "^2.0.23",
-        "@ai-sdk/react": "^2.0.78",
+        "@ai-sdk/google": "^2.0.28",
+        "@ai-sdk/react": "^2.0.87",
         "@ariakit/react": "0.4.19",
-        "@aws-sdk/client-s3": "3.917.0",
+        "@aws-sdk/client-s3": "3.922.0",
         "@dnd-kit/core": "^6.3.1",
         "@dnd-kit/modifiers": "^9.0.0",
         "@dnd-kit/sortable": "^10.0.0",
@@ -18,25 +18,25 @@
         "@prisma/extension-accelerate": "^2.0.2",
         "@radix-ui/react-accordion": "1.2.12",
         "@radix-ui/react-alert-dialog": "1.1.15",
-        "@radix-ui/react-aspect-ratio": "1.1.7",
-        "@radix-ui/react-avatar": "1.1.10",
+        "@radix-ui/react-aspect-ratio": "1.1.8",
+        "@radix-ui/react-avatar": "1.1.11",
         "@radix-ui/react-checkbox": "^1.3.3",
         "@radix-ui/react-collapsible": "1.1.12",
         "@radix-ui/react-context-menu": "2.2.16",
         "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-dropdown-menu": "^2.1.16",
         "@radix-ui/react-hover-card": "1.1.15",
-        "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-label": "^2.1.8",
         "@radix-ui/react-menubar": "1.1.16",
         "@radix-ui/react-navigation-menu": "1.2.14",
         "@radix-ui/react-popover": "1.1.15",
-        "@radix-ui/react-progress": "1.1.7",
+        "@radix-ui/react-progress": "1.1.8",
         "@radix-ui/react-radio-group": "1.3.8",
         "@radix-ui/react-scroll-area": "1.2.10",
         "@radix-ui/react-select": "^2.2.6",
-        "@radix-ui/react-separator": "1.1.7",
+        "@radix-ui/react-separator": "1.1.8",
         "@radix-ui/react-slider": "1.3.6",
-        "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-slot": "^1.2.4",
         "@radix-ui/react-switch": "1.2.6",
         "@radix-ui/react-tabs": "1.1.13",
         "@radix-ui/react-toast": "1.2.15",
@@ -44,20 +44,20 @@
         "@radix-ui/react-toggle-group": "1.1.11",
         "@radix-ui/react-tooltip": "1.2.8",
         "@react-email/components": "^0.5.7",
-        "@react-hookz/web": "25.1.1",
+        "@react-hookz/web": "25.2.0",
         "@simpleanalytics/next": "^1.0.1",
         "@svgr/webpack": "^8.1.0",
         "@t3-oss/env-nextjs": "^0.13.8",
         "@tanstack/react-form": "^1.23.8",
-        "@tanstack/react-query": "^5.90.5",
+        "@tanstack/react-query": "^5.90.6",
         "@tanstack/react-table": "^8.21.3",
-        "@trpc/client": "^11.6.0",
-        "@trpc/react-query": "^11.6.0",
-        "@trpc/server": "^11.6.0",
-        "@trpc/tanstack-react-query": "^11.6.0",
-        "ai": "^5.0.78",
-        "bcryptjs": "^3.0.2",
-        "better-auth": "^1.3.31",
+        "@trpc/client": "^11.7.1",
+        "@trpc/react-query": "^11.7.1",
+        "@trpc/server": "^11.7.1",
+        "@trpc/tanstack-react-query": "^11.7.1",
+        "ai": "^5.0.87",
+        "bcryptjs": "^3.0.3",
+        "better-auth": "^1.3.34",
         "class-variance-authority": "^0.7.1",
         "client-only": "^0.0.1",
         "clsx": "^2.1.1",
@@ -65,15 +65,15 @@
         "date-fns": "^4.1.0",
         "embla-carousel-react": "^8.6.0",
         "framer-motion": "^12.23.24",
-        "globals": "^16.4.0",
+        "globals": "^16.5.0",
         "husky": "^9.1.7",
         "input-otp": "^1.4.2",
-        "lucide-react": "^0.548.0",
+        "lucide-react": "^0.552.0",
         "luxon": "^3.7.2",
         "minio": "^8.0.6",
         "motion": "^12.23.24",
         "nanoid": "^5.1.6",
-        "next": "16.0.0",
+        "next": "16.0.1",
         "next-intl": "^4.4.0",
         "next-themes": "^0.4.6",
         "nextjs-toploader": "^3.9.17",
@@ -84,18 +84,18 @@
         "react-day-picker": "^9.11.1",
         "react-dom": "19.2.0",
         "react-error-boundary": "^6.0.0",
-        "react-hook-form": "^7.65.0",
+        "react-hook-form": "^7.66.0",
         "react-hot-toast": "^2.6.0",
         "react-icons": "^5.5.0",
         "react-resizable-panels": "^3.0.6",
         "react-toastify": "^11.0.5",
         "recharts": "^3.3.0",
-        "resend": "^6.2.2",
+        "resend": "^6.4.1",
         "server-only": "^0.0.1",
         "smart-clinic": ".",
         "sonner": "^2.0.7",
         "streamdown": "^1.4.0",
-        "superjson": "^2.2.3",
+        "superjson": "^2.2.5",
         "tailwind-merge": "^3.3.1",
         "tw-animate-css": "^1.4.0",
         "ua-parser-js": "^2.0.6",
@@ -104,9 +104,9 @@
         "zod": "^4.1.12"
     },
     "devDependencies": {
-        "@better-auth/cli": "^1.3.31",
-        "@biomejs/biome": "2.3.0",
-        "@next/bundle-analyzer": "^16.0.0",
+        "@better-auth/cli": "^1.3.34",
+        "@biomejs/biome": "2.3.3",
+        "@next/bundle-analyzer": "^16.0.1",
         "@tailwindcss/postcss": "^4",
         "@tanstack/react-query-devtools": "^5.90.2",
         "@total-typescript/ts-reset": "^0.6.1",
@@ -115,7 +115,7 @@
         "@types/js-cookie": "^3.0.6",
         "@types/luxon": "^3.7.1",
         "@types/node": "^24",
-        "@types/pg": "^8.15.5",
+        "@types/pg": "^8.15.6",
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "babel-plugin-react-compiler": "1.0.0",
@@ -125,7 +125,7 @@
         "npm-run-all": "^4.1.5",
         "postcss": "^8.5.6",
         "prisma": "^6.18.0",
-        "rimraf": "^6.0.1",
+        "rimraf": "^6.1.0",
         "start-server-and-test": "^2.1.2",
         "tailwindcss": "^4",
         "ts-node": "^10.9.2",
@@ -135,6 +135,7 @@
     "name": "smart-clinic",
     "private": true,
     "scripts": {
+        "analyze": "BUNDLE_ANALYZER_ENABLED=true bun run build",
         "build": "next build --webpack",
         "check": "biome check .",
         "check:unsafe": "biome check --write --unsafe .",
