--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "paths": {
-            "@/*": ["./src/*"]
+            "@/*": ["./src/*"],
+            "@/public/*": ["./public/*"]
         },
         "plugins": [
             {
