--- a/package.json
+++ b/package.json
@@ -109,6 +109,9 @@
         "@next/bundle-analyzer": "^16.0.1",
         "@tailwindcss/postcss": "^4",
         "@tanstack/react-query-devtools": "^5.90.2",
+        "@testing-library/jest-dom": "^6.9.1",
+        "@testing-library/react": "^16.3.0",
+        "@testing-library/user-event": "^14.6.1",
         "@total-typescript/ts-reset": "^0.6.1",
         "@types/bun": "^1.3.1",
         "@types/jest": "^30.0.0",
@@ -118,10 +121,14 @@
         "@types/pg": "^8.15.6",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "@vitejs/plugin-react": "^5.1.0",
+        "@vitest/coverage-v8": "^4.0.7",
+        "@vitest/ui": "^4.0.7",
         "babel-plugin-react-compiler": "1.0.0",
         "cross-env": "^10.1.0",
         "dotenv": "^17.2.3",
         "jiti": "^2.6.1",
+        "jsdom": "^27.1.0",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.5.6",
         "prisma": "^6.18.0",
@@ -130,7 +137,9 @@
         "tailwindcss": "^4",
         "ts-node": "^10.9.2",
         "tsx": "^4.20.6",
-        "typescript": "^5"
+        "typescript": "^5",
+        "vite-tsconfig-paths": "^5.1.4",
+        "vitest": "^4.0.7"
     },
     "name": "smart-clinic",
     "private": true,
@@ -153,6 +162,12 @@
         "postinstall": "prisma generate",
         "preview": "next build && next start",
         "start": "next start",
+        "test": "vitest run",
+        "test:e2e": "cross-env NODE_ENV=test pnpm with-env playwright test",
+        "test:e2e:inspector": "cross-env NODE_ENV=test pnpm with-env playwright test $1 --debug",
+        "test:e2e:ui": "cross-env NODE_ENV=test pnpm with-env playwright test --ui",
+        "test:unit": "vitest --ui",
+        "test:unit:coverage": "vitest run --coverage",
         "typecheck": "tsc --noEmit"
     },
     "version": "0.1.0"
